refactor SecurityConfiguration